# advent2021

./: .gitignore  Cargo.toml  Makefile  flake.nix  treefmt.toml
.github/workflows/: docker.yml  example-command.yml  slash-command-dispatch.yml  test.yml
ci/: Justfile  ci_tool.cue  gen.go  go.mod  go.sum  tools.go  workflows.cue
ci/schema/: vendor_tool.cue
inputs/: day1.txt  day2.txt  day3.json
src/: day1.rs  day2.rs  day3.rs  main.rs  models.rs  routes.rs
